[gd_scene load_steps=4 format=3 uid="uid://b2bmo6bx4cs22"]

[ext_resource type="Script" path="res://Scripts/projectiles/laser.gd" id="1_6ti1d"]
[ext_resource type="Texture2D" uid="uid://n307w5wipt1h" path="res://Textures/blue.png" id="1_wxc2e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ia3w"]
height = 78.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_6ti1d")
speed = 1250
body_entered_reciever = "HitReceiver"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.5, -59)
texture = ExtResource("1_wxc2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -102)
shape = SubResource("CapsuleShape2D_7ia3w")

[node name="DespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
